[package]
name = "aloha"
version = "0.1.0"
edition = "2024"
description = "HTTP/reverse-proxy server with TLS, virtual hosts, and static file serving"
authors = ["Michael Paddon <6d7770@gmail.com>"]
license = "BSD-2-Clause"

[[bin]]
name = "aloha"
path = "src/main.rs"

[dependencies]
hyper              = { version = "1",    features = ["http1", "http2", "server"] }
hyper-util         = { version = "0.1",  features = ["tokio", "server", "server-auto"] }
http-body-util     = "0.1"
bytes              = "1"
rustls             = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile     = "2"
tokio-rustls       = "0.26"
rcgen              = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
instant-acme       = { version = "0.8", default-features = false, features = ["aws-lc-rs", "hyper-rustls"] }
async-trait        = "0.1"
arc-swap           = "1"
x509-parser        = "0.18"
serde_json         = "1"
tokio              = { version = "1",    features = ["full"] }
kdl                = "4"
miette             = { version = "5", default-features = false }
regex              = "1"
anyhow             = "1"
mime_guess         = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs"] }

[dev-dependencies]
tempfile = "3"
time     = "0.3"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "symbols"

# ── Debian package ────────────────────────────────────────────────
# Build with:  cargo deb
# Output:      target/debian/aloha_<version>_<arch>.deb

[package.metadata.deb]
maintainer = "Michael Paddon <6d7770@gmail.com>"
copyright  = "2026, Michael Paddon"
license-file = "LICENSE"
extended-description = """\
aloha is a lightweight HTTP server and reverse proxy.
 .
 Features:
  * Virtual host routing — exact and regex (~/pattern/) hostname matching
  * Automatic TLS via Let's Encrypt (ACME HTTP-01 challenge)
  * TLS with self-signed or PEM-file certificates
  * Static file serving with streaming, ETag caching, and Range support
  * HTTP redirects
  * Configurable per-listener connection and request timeouts
  * Structured access logging via the RUST_LOG environment variable
  * Privilege drop — starts as root to bind port 443, then runs as aloha:aloha
"""
depends  = "$auto"
section  = "net"
priority = "optional"

# Maintainer scripts (postinst/prerm) live in debian/.
# Administrator enables the service with:
#   systemctl enable --now aloha
maintainer-scripts = "packaging/debian"

[[package.metadata.deb.assets]]
source = "target/release/aloha"
dest   = "usr/bin/aloha"
mode   = "755"

[[package.metadata.deb.assets]]
source = "packaging/systemd/aloha.service"
dest   = "usr/lib/systemd/system/aloha.service"
mode   = "644"

[[package.metadata.deb.assets]]
source = "aloha.kdl"
dest   = "etc/aloha.kdl"
mode   = "644"

[[package.metadata.deb.assets]]
source = "html/index.html"
dest   = "var/www/aloha/index.html"
mode   = "644"

[[package.metadata.deb.assets]]
source = "html/config.html"
dest   = "var/www/aloha/config.html"
mode   = "644"

[[package.metadata.deb.assets]]
source = "html/aloha-logo.svg"
dest   = "var/www/aloha/aloha-logo.svg"
mode   = "644"

# dpkg preserves this file across upgrades, prompting the user if
# they have local changes.
conf-files = ["/etc/aloha.kdl"]

# ── RPM package ───────────────────────────────────────────────────
# Build with:  cargo generate-rpm   (after cargo build --release)
# Output:      target/generate-rpm/aloha-<version>-1.<arch>.rpm
# Or simply:   make rpm

[package.metadata.generate-rpm]
post_install_script  = "packaging/rpm/postinst.sh"
pre_uninstall_script = "packaging/rpm/prerm.sh"

[[package.metadata.generate-rpm.assets]]
source = "target/release/aloha"
dest   = "/usr/bin/aloha"
mode   = "755"

[[package.metadata.generate-rpm.assets]]
source = "packaging/systemd/aloha.service"
dest   = "/usr/lib/systemd/system/aloha.service"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "aloha.kdl"
dest   = "/etc/aloha.kdl"
mode   = "644"
config = true

[[package.metadata.generate-rpm.assets]]
source = "html/index.html"
dest   = "/var/www/aloha/index.html"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "html/config.html"
dest   = "/var/www/aloha/config.html"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "html/aloha-logo.svg"
dest   = "/var/www/aloha/aloha-logo.svg"
mode   = "644"
