[package]
name = "aloha"
version = "1.0.0-rc3"
edition = "2024"
description = "HTTP/reverse-proxy server with TLS, virtual hosts, and static file serving"
authors = ["Michael Paddon <6d7770@gmail.com>"]
license = "BSD-2-Clause"

[[bin]]
name = "aloha"
path = "src/main.rs"

# Test-only h3 client used by the shell integration suite to round-
# trip HTTP/3 requests.  Built with `cargo build --example h3get`
# and copied into the container alongside aloha.  Lives as a
# [[example]] rather than a [[bin]] so it doesn't appear in the
# packaged binaries.
[[example]]
name = "h3get"
path = "examples/h3get.rs"

[dependencies]
hyper              = { version = "1",    features = ["http1", "http2", "server"] }
hyper-util         = { version = "0.1",  features = ["tokio", "server", "server-auto", "client", "client-legacy"] }
http-body-util     = "0.1"
bytes              = "1"
rustls             = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
# HTTP/3 stack -- unconditional so the packaged binary always serves
# both TCP (h1/h2) and UDP (h3) listeners; an operator only needs to
# declare a `udp:` listener in aloha.kdl to enable h3.
quinn              = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
h3                 = "0.0.8"
h3-quinn           = "0.0.10"
rustls-pemfile     = "2"
tokio-rustls       = "0.26"
rcgen              = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
instant-acme       = { version = "0.8", default-features = false, features = ["aws-lc-rs", "hyper-rustls"] }
async-trait        = "0.1"
arc-swap           = "1"
x509-parser        = "0.18"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1",    features = ["full"] }
# Adapter for turning tokio mpsc receivers into http_body_util StreamBody.
# Used by the HTTP/3 outbound proxy to stream upstream response bodies
# back to the downstream client without buffering them in memory.
tokio-stream       = "0.1"
kdl                = "6"
miette             = { version = "7", default-features = false }
regex              = "1"
anyhow             = "1"
mime_guess         = "2"
flate2             = "1"
brotli             = "8"
ipnet              = "2"
hyper-rustls       = { version = "0.27", default-features = false, features = ["aws-lc-rs", "webpki-tokio", "http1", "tls12"] }
webpki-roots       = "1"
tower-service      = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive"] }
base64             = "0.22"
ldap3      = { version = "0.12.1", default-features = false, features = ["sync", "tls-rustls-aws-lc-rs"] }
maxminddb  = "0.28"
zeroize    = "1"
p256       = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
sha2       = "0.10"
rand_core  = { version = "0.6", features = ["getrandom"] }
lru        = "0.16"
# OAuth/OIDC client used by `auth jwt { wrap oidc { ... } }`.
# Provides discovery, JWKS fetch, authorization-code + PKCE flow,
# and ID-token validation.
openidconnect = "3"
url           = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs", "socket"] }
pam = "0.7"

[dev-dependencies]
tempfile = "3"
time     = "0.3"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "symbols"

[package.metadata.scripts]

# Build with:  cargo run-script smoke
# Requires:    cargo install cargo-run-script
smoke = '''
set -e
cd "$CARGO_MANIFEST_DIR"
cargo build --release
# h3get is the HTTP/3 client used by the integration suite (Debian
# curl can't do --http3).  Built as a release example so the
# container picks up an optimised binary.
cargo build --release --example h3get
podman build -f tests/integration/Containerfile -t aloha-test .
podman run aloha-test
'''

# Build with:  cargo run-script oci
# Requires:    cargo install cargo-run-script
oci = '''
set -e
cd "$CARGO_MANIFEST_DIR"
VERSION=$(grep '^version' Cargo.toml | head -1 | cut -d'"' -f2)
podman build -f packaging/oci/Containerfile -t "aloha:$VERSION" -t aloha:latest .
'''

# -- Debian package ------------------------------------------------
# Build with:  cargo deb
# Output:      target/debian/aloha_<version>_<arch>.deb

[package.metadata.deb]
maintainer = "Michael Paddon <6d7770@gmail.com>"
copyright  = "2026, Michael Paddon"
license-file = "LICENSE"
extended-description-file = "packaging/description.txt"
depends  = "$auto"
section  = "net"
priority = "optional"

# Maintainer scripts (postinst/prerm) live in debian/.
# Administrator enables the service with:
#   systemctl enable --now aloha
maintainer-scripts = "packaging/debian"

[[package.metadata.deb.assets]]
source = "target/release/aloha"
dest   = "usr/bin/aloha"
mode   = "755"

[[package.metadata.deb.assets]]
source = "packaging/systemd/aloha.service"
dest   = "usr/lib/systemd/system/aloha.service"
mode   = "644"

[[package.metadata.deb.assets]]
source = "aloha.kdl"
dest   = "etc/aloha.kdl"
mode   = "644"

[[package.metadata.deb.assets]]
source = "docs/index.html"
dest   = "var/www/aloha/index.html"
mode   = "644"

[[package.metadata.deb.assets]]
source = "docs/config.html"
dest   = "var/www/aloha/config.html"
mode   = "644"

[[package.metadata.deb.assets]]
source = "docs/aloha-logo.svg"
dest   = "var/www/aloha/aloha-logo.svg"
mode   = "644"

[[package.metadata.deb.assets]]
source = "packaging/man/aloha.1"
dest   = "usr/share/man/man1/aloha.1"
mode   = "644"

[[package.metadata.deb.assets]]
source = "packaging/fail2ban/filter.d/aloha.conf"
dest   = "etc/fail2ban/filter.d/aloha.conf"
mode   = "644"

[[package.metadata.deb.assets]]
source = "packaging/fail2ban/jail.d/aloha.conf"
dest   = "etc/fail2ban/jail.d/aloha.conf"
mode   = "644"

# dpkg preserves these files across upgrades, prompting the user if
# they have local changes.
conf-files = ["/etc/aloha.kdl",
              "/etc/fail2ban/filter.d/aloha.conf",
              "/etc/fail2ban/jail.d/aloha.conf"]

# -- RPM package ---------------------------------------------------
# Build with:  cargo generate-rpm   (after cargo build --release)
# Output:      target/generate-rpm/aloha-<version>-1.<arch>.rpm
# Or simply:   make rpm

[package.metadata.generate-rpm]
post_install_script  = "packaging/rpm/postinst.sh"
pre_uninstall_script = "packaging/rpm/prerm.sh"


[[package.metadata.generate-rpm.assets]]
source = "target/release/aloha"
dest   = "/usr/bin/aloha"
mode   = "755"

[[package.metadata.generate-rpm.assets]]
source = "packaging/systemd/aloha.service"
dest   = "/usr/lib/systemd/system/aloha.service"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "aloha.kdl"
dest   = "/etc/aloha.kdl"
mode   = "644"
config = true

[[package.metadata.generate-rpm.assets]]
source = "docs/index.html"
dest   = "/var/www/aloha/index.html"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "docs/config.html"
dest   = "/var/www/aloha/config.html"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "docs/aloha-logo.svg"
dest   = "/var/www/aloha/aloha-logo.svg"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "packaging/man/aloha.1"
dest   = "/usr/share/man/man1/aloha.1"
mode   = "644"

[[package.metadata.generate-rpm.assets]]
source = "packaging/fail2ban/filter.d/aloha.conf"
dest   = "/etc/fail2ban/filter.d/aloha.conf"
mode   = "644"
config = true

[[package.metadata.generate-rpm.assets]]
source = "packaging/fail2ban/jail.d/aloha.conf"
dest   = "/etc/fail2ban/jail.d/aloha.conf"
mode   = "644"
config = true
